Se agrego lo de estadistica y se creo la unidad de E/S de SO

--- a/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
+++ b/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
@@ -103,6 +103,8 @@ Caracterizar y clasificar los métodos para generar conocimiento es complicado. 
 -  ***Método sistémico***: Está dirigido a modelar el objeto mediante la determinación de sus componentes, así como las relaciones entre ellos. Esas relaciones determinan, por un lado, la estructura del objeto, y, por otro su dinámica.
 - ***Método sintético***. Es un proceso mediante el cual se relacionan hechos aparentemente aislados y se formula una teoría que unifica los diversos elementos. Consiste en la reunión racional de varios elementos dispersos en una nueva totalidad. Este método se presenta más en el planteamiento de la hipótesis. El investigador sintetiza las superaciones en la imaginación para establecer una explicación tentativa que someterá a prueba.
 
+## Método Científico Alternativo
+
 Debido a su fuerte relación con el mundo virtual y la abstracción matemática, en las **Ciencias de la Computación** el modelo científico clásico suele ser reemplazado por una variante más adecuada.
 El proceso suele comenzar con una idea, una noción de que algún proceso algorítmico puede ser modificado o creado, para proporcionar nuevas maneras de describir y transformar información, o brindar nuevas capacidades que apoyen de alguna manera está anterior. Luego se analiza el estado del arte buscando técnicas similares que puedan servir de base o brindar un marco teórico a la idea general. Se establecen las condiciones del problema y se plantean las hipótesis de solución. Se realizan definiciones matemáticas y se establecen propiedades, al igual que se realiza la especificación de diseño. Se experimenta y testean las hipótesis. Este proceso suele involucrar iteración, sobre todo en research through design y prototipado. Finalmente, se establecen y publican los resultados formales.
 
