Se termino la parte de E/S de SO

--- a/3° Año/Sistemas Operativos/Unidad 4/1. Sistema de Entrada-Salida.md
+++ b/3° Año/Sistemas Operativos/Unidad 4/1. Sistema de Entrada-Salida.md
@@ -1,5 +1,77 @@
 
+Los dispositivos se comunican mediante los llamados puertos. Un puerto de E/S consta de 4 registros:
+- Status.
+- Control.
+- Data-in.
+- Data-out.
 
+Si uno o más dispositivos utilizan un conjunto común de cables, la conexión se denomina ***bus***. Los controladores son componentes electrónicos que manejan un puerto, un bus o un dispositivo.
+El sistema operativo administra y resuelve errores variados de E/S de tipo transitorio, como lo son los fallos de escritura, la temporización de red o una impresora fuera de línea. Los errores permanentes o desconocidos de E/S devuelven un código de error como resultado de la llamada de E/S al sistema.
+El núcleo del sistema operativo guarda el estado de los componentes de E/S, incluyendo a la tabla de archivos abiertos, la conexión de red y el estado de los dispositivos.
+
+#### Flujo de las operaciones de E/S
+
+Cuando un proceso quiere leer un archivo en disco, y ejecuta la llamada al sistema ***read***. El sistema de E/S recibe la petición y realiza los siguientes pasos:
+
+- Determina el dispositivo que almacena el archivo.
+- Traduce datos lógicos a representación física en el dispositivo.
+- Lee los datos físicamente del disco al buffer de memoria.
+- Pone disponible los datos al proceso que los pidió.
+- Devuelve el control al proceso.
+
+#### Rendimiento de E/S
+
+La E/S es uno de los factores más importantes para el rendimiento del sistema, ya que:
+
+- Gasta procesador para ejecutar los manejadores, el software de entrada/salida y los gestores de interrupción.
+- Origina cambios de contextos debido a las interrupciones.
+- Necesita copia de datos en memoria principal.
+- Puede incluir tráfico en la red.
+- Los dispositivos de E/S salida son más lentos que el procesador.
+
+![[SO-ESsoftware.png]]
+
+>[!tldr] Los Relojes
+>En una computadora, el reloj es uno de los dispositivos más importantes y cumple las siguientes funciones:
+>1. Administra el ritmo de ejecución de las instrucciones de máquina.
+>2. Controla la fecha y hora del equipo.
+>3. Generar instrucciones periódicas mediante un divisor de frecuencia.
+>
+>En general el hardware de reloj está basado en dos tipos distintos
+>1. Relojes que se alimentan con electricidad y generan interrupciones periódicas, este es un mecanismo peligroso, ya que se pueden adelantar o atrasar.
+>2. Relojes basados en cristal de cuarzo, estos son programables.
+>
+>Mediante las interrupciones generadas por el reloj se controla:
+>1. Control de tiempo de ejecución por proceso.
+>2. Mantención de la hora del día.
+>3. Realizar monitoreo del sistema.
+>4. Manejo de alarmas.
+>
+>**NOTA**: Los relojes son dispositivos que no caen en la categoría de dispositivos de bloques o de carácter.
+
+#### Tipos de Almacenamientos
+
+Los buffers son almacenamientos intermedios que guardan información temporal que es utilizada por un proceso o un dispositivo, existen 3 tipos de buffers:
+
+![[SO-buffers.png]]
+
+Los discos duros son un tipo de almacenamiento secundario que posee una gran capacidad, estos cuentan con un algoritmo que se encarga de gestionar el cómo se van a atender las peticiones (ver filmina). Estos discos antes de poder ser usados se le debe realizar un formateo físico, que divide el disco en sectores en los cuales el controlador va a poder leer y escribir datos. Para poder usar un disco, primero se tiene que realizar un particionamiento lógico del mismo y crear un sistema de archivos que le dará el formato lógico al disco.
+La memoria virtual es una extensión de la memoria principal, la cual está situada en el disco duro, este espacio se puede gestionar en forma de archivo o como una partición más del disco. En ambos casos el núcleo del sistema operativo tiene un mapa del ***Swap*** para gestionar su uso.
+
+>[!tldr] Fiabilidad de los Discos y el Sistema de RAID
+>Existen varias técnicas que implican el uso de mayor cantidad de discos duros para ayudar a mejorar el uso de estos mismos, los esquemas de tipo ***RAID*** mejoran el rendimiento y la fiabilidad del sistema de almacenamiento guardando información de forma redundante.
+
+Los dispositivos de almacenamiento terciario se refiere a todos aquellos dispositivos, generalmente extraíbles, que pueden ser conectados a un equipo, el principal incentivo de este tipo de dispositivos es que estos son más baratos y portables, dos aspectos a tener en cuenta a la hora de utilizar estos dispositivos es su ancho de banda, que este sea sostenido y efectivo, además de que posea una latencia lo más baja posible.
+
+#### Interfaz Procesador-Periférico
+
+La velocidad y complejidad de los periféricos determinan como deben ser conectadas al procesador. Hay tres tipos de conexión:
+
+- **Registros**: Los dispositivos se pueden conectar al procesador por los registros de los dispositivos que pueden ser accedidos directamente en una zona determinada de la memoria o indirectamente por medio de instrucciones hardware que devuelven el estado del mismo. Las principales funciones de estos registros es transferir el estado, instrucciones, datos desde y hacia el dispositivo.
+- **Controladores**: Los dispositivos no se conectan directamente al procesador, sino que lo hacen a través de un controlador que contiene el estado del dispositivo, controla el mismo y chequea los datos transferidos.
+- **Canales**: Los controladores se conectan al procesador a través de un canal. Los canales son manejados por comandos y cuando terminan la operación devuelven el estado correspondiente e ***interrumpen al procesador***. Estos canales pueden ser selectores o multiplexores.
+
+---
 ### Cosas que dijo Berón
 
 - Las E/S son mucho más lentos con respecto a la memoria principal.
