Pequeñas correcciones en todos lados

--- a/3° Año/Lenguajes de Programación/Unidad 5/2. Sentencias.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/2. Sentencias.md
@@ -21,7 +21,7 @@ Las asignaciones en modo mixto se presentan cuando el tipo de dato de la variabl
 
 ##### Asignación como Expresión
 
-Es cuando el resultado de una sentencia de asignación puede utilizarse como un operador en una expresión, lenguajes como C, C++ o Java permiten este tipo de asignaciones, esto obviamente dificulta la legibilidad, puede provocar efectos colaterales y dificultar la detección de errores por parte del usuario.
+Es cuando el resultado de una sentencia de asignación puede utilizarse como un operando en una expresión, lenguajes como C, C++ o Java permiten este tipo de asignaciones, esto obviamente dificulta la legibilidad, puede provocar efectos colaterales y dificultar la detección de errores por parte del usuario.
 Lenguajes como Pascal y Ada tiene un enfoque distinto, donde las asignaciones son instrucciones independientes y el destino se restringe a una variable.
 
 ---
