--- a/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
+++ b/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
@@ -66,10 +66,9 @@ El modelo de proceso de investigación evolutivo reconoce que la investigación 
 2. Pruebas matemáticas calculadas con ayuda de computadoras → La estructura y los pasos deductivos son provistos por humanos, pero ciertas partes son delegadas a la computadora.
 3. Pruebas completamente formales, generadas y validadas por computadora → Cada paso de la prueba es conducido y validado por una computadora, posiblemente bajo guía de humanos
 
-El modelo de proceso evolutivo es el que mejor describe el proceso
-“real” de investigación. Si bien el modelo evolutivo permite que “las reglas de juego” cambien a lo largo del tiempo, ¡esto no implica que no haya reglas!
+El modelo de proceso evolutivo es el que mejor describe el proceso “real” de investigación. Si bien el modelo evolutivo permite que “las reglas de juego” cambien a lo largo del tiempo, ¡esto no implica que no haya reglas!
 
-### Método Científico
+## Método Científico
 
 El método científico es un proceso, es decir, un conjunto de pasos que se debe seguir para obtener conocimiento válido desde una perspectiva científica, haciendo uso de instrumentos confiables y reduciendo la influencia de la subjetividad del científico en su trabajo. Este método se basa en dos pilares clave: la ***reproducibilidad*** y la ***refutabilidad***, que son fundamentales para reducir la subjetividad y crear conocimiento confiable.
 La reproducibilidad implica la capacidad de repetir un determinado experimento, en cualquier lugar y por cualquier persona.  Este pilar se basa, esencialmente, en la comunicación y publicidad de los resultados obtenidos, y su verificación por la comunidad científica.
@@ -85,7 +84,7 @@ La investigación utiliza la heurística para aprovechar lo inesperado, a esto s
 >[!note] Nota
 >Tanto caracterizaciones como experimentos involucran colecciones de datos, en la práctica se involucran iteraciones, recursiones, entrelazamientos y ordenamientos de los elementos.
 
-###### Tipos de Métodos Científicos
+#### Tipos de Métodos Científicos
 
 Caracterizar y clasificar los métodos para generar conocimiento es complicado. Aunque no hay una clasificación única ni consenso sobre la cantidad de métodos, algunas clasificaciones son aceptadas por la comunidad. Estas sirven como guía, pero puede haber solapamientos entre ellas.
 
