Se agrego lo de 'cosas para agregar' en MS

--- a/3° Año/Metodología de Sistemas I/Unidad 7/1. Lenguaje Unificado de Modelado - UML.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 7/1. Lenguaje Unificado de Modelado - UML.md
@@ -45,11 +45,16 @@ Un modelo tiene semántica, notación y puede adoptar diversos formatos que incl
 		- **Generalización**: Un caso de uso B especializa a un caso de uso A, si el flujo de eventos de B es un refinamiento de los flujos de eventos de A. Vendría a comportarse de la misma forma que la herencia en un diagrama de clases.
 	- **Entorno del sistema**: Generalmente, cuando se grafica un diagrama de caso de uso, el sistema es delimitado, todos los actores están por fuera del límite y todos los casos de uso se encuentran dentro de este.
 
+![[MS-caso-uso.png]]
+
 >[!tldr] Descripción de los Casos de Uso
 >Para cada caso de uso representado en la gráfica, existe una descripción detallada de todos la información que requiere cada caso de uso para ejecutarse o llevarse a cabo correctamente, al igual que las posibles alternativas. La forma de descripción no está estandarizada y varía de acuerdo a la bibliografía que se seleccione.
 
 - **Diagrama de Máquina de Estados**: Un diagrama de máquina de estados describe el comportamiento de un objeto en forma de posibles estados y transiciones desencadenadas por varios eventos.
 - **Diagrama de Actividad**: Un diagrama de actividad muestra el flujo de control entre una serie de tareas o actividades.
+
+![[MS-diagrama-actividad.png]]
+
 - **Diagrama de Interacción**: Un diagrama de interacción proporciona una visión integral del comportamiento de un sistema, es decir, muestra el flujo de control y de datos entre los elementos del sistema modelado. Se representan mediante los siguientes diagramas:
 	- **Diagrama de Secuencia**: El diagrama de secuencia muestra un conjunto de mensajes ordenados en una secuencia temporal. Cada rol se muestra como una línea de vida. Los mensajes se representan con flechas entre líneas de vida.
 	- **Diagrama de Comunicación**: El diagrama de comunicación representa la comunicación entre diferentes objetos. Se centra en las relaciones de comunicación entre los objetos en interacción más que en el orden cronológico del intercambio de mensajes.
