--- a/3° Año/Metodología de Sistemas I/Unidad 8/1. Reingenieria del Proceso de Negocios.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 8/1. Reingenieria del Proceso de Negocios.md
@@ -8,7 +8,7 @@ La reingeniería es la revisión **fundamental** y el **rediseño radical** de *
 - **Espectacular**: La reingeniería no es cuestión de hacer mejoras marginales o incrementales, sino de dar un salto gigantesco en rendimiento.
 - **Procesos**: Constituyen el objeto de la reingeniería. Un proceso de negocio se define como una colección de actividades que toma una o más entradas y crea una salida que es de valor para el cliente, el objetivo de cualquier proceso es satisfacer con éxito a los clientes y sus necesidades.
 
-Los objetivos fundamentales de la reingeniería es racionalizar las operaciones, reducir los costos, mejorar la calidad, aumentar los ingresos y mejorar la orientación al cliente.
+Los objetivos fundamentales de la reingeniería es racionalizar las operaciones (simplificar), reducir los costos, mejorar la calidad, aumentar los ingresos y mejorar la orientación al cliente.
 Para que este proceso pueda ser llevado a cabo se debe contar con apoyo y compromiso al cambio por parte de la alta gerencia y de los empleados, se debe hacer uso de la tecnología, de forma que esta nos permita dinamizar los cambios a realizar. Además, se deben identificar los proceso de negocio más importantes, a cualquier nivel, con el propósito de reconceptualizar dicho proceso. Este proceso de reingeniería es transversal a las áreas y procesos de la organización, es decir, que analiza todos los procesos de la organización.
 La reingeniería se aplica en los tópicos más relevantes de una organización: recursos humanos, procesos y tecnología. Ahora bien, para seleccionar el proceso al que se le deben aplicar los cambios se debe prestar atención en los siguientes aspectos:
 
