Se agrego la recomendación a la unidad 8 de LP

--- a/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
+++ b/3° Año/Lenguajes de Programación/Unidad 8/1. Criterio de Evaluación de los Lenguajes.md
@@ -41,6 +41,10 @@ Este criterio está relacionado con la capacidad de los programas de realizar su
 - **Manejo de excepciones**: Es la capacidad de un programa de interceptar los errores de ejecución, tomar las medidas correctivas, y continuar. Ada, C++, Java y C# incluyen manejo de excepciones, pero C no.
  - **Alias**: Significa tener dos o más identificadores, para la misma celda de memoria. En algunos lenguajes, el alias se usa para superar las deficiencias en las facilidades de abstracción de datos, mientras que otros lenguajes lo restringen.
 
+A forma de resumen puede ver la siguiente imagen que muestra todas las características de diseño de las que depende cada criterio.
+
+![[MS-criterios-elbueno.png]]
+
 #### Costo
 
 A niveles generales, los costos relacionados con el uso de un determinado lenguaje de programación se puede medir de acuerdo a diferentes criterios:
