Se acorto lo de la unidad 5 de Teze

--- a/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
+++ b/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
@@ -1,5 +1,3 @@
->[!quote] ¿Que es la Comunicación? -  Wikipedia
->*La **comunicación** es el proceso mediante el cual se puede transmitir información de una entidad a otra, alterando el estado de conocimiento de la entidad receptora. La entidad emisora se considera única, aunque simultáneamente pueden existir diversas entidades emisores transmitiendo la misma información o mensaje. En general, suele haber más de una entidad receptora.*
 
 La forma en que se comunican los resultados de una investigación es mediante la elaboración de artículos (papers) y su publicación. Dichos papers pueden ser publicados en distintos lugares, como, por ejemplo, en workshops, conferencias o revistas científicas; pero también existen otros métodos que se pueden utilizar para publicar un trabajo de investigación, tal como los reportes técnicos, libros o incluso tesis.
 El impacto de la comunicación es gradual y toda investigación debería someterse a un proceso gradual de ***publicación, revisión y mejora***; hasta alcanzar su publicación en revistas indexadas, La elección del foro de publicación depende de varios factores, como lo podrían ser la calidad o impacto del resultado a mostrar, la necesidad de producción (presentación de informes, becas), plazos de entrega o aspectos mundanos como disponibilidad de fondos para viajar a presentar el artículo.
@@ -70,41 +68,36 @@ Debe exponer toda la información necesaria para poder entender y reducir los re
 | Bibliografía                    | Los libros o artículos referenciados.                                                     |
 | Apéndice (Opcional)             | Demostraciones de teoremas, tablas de siglas, tablas de figuras, índices temáticos, etc. |
 
-- **Resumen o Abstract**: El resumen, así como el título, es importante para atrapar al potencial lector, es por eso que este debe "*vender bien el producto*". Generalmente, el resumen sumariza, en un párrafo, los siguientes aspectos:
-	- El tópico o problema a investigar.
-	- Los métodos o experimentos usados para resolverlo.
-	- Los hallazgos o resultados originales del artículo.
-	- Realiza unas breves conclusiones a partir de los resultados anteriores.
-- **Introducción**: La introducción debe establecer el contexto en el cual el artículo está siendo reportado, generalmente contiene referencias a literatura primaria en el área y un resumen de la visión del autor acerca del problema investigado. En este apartado se explica el objetivo del artículo en forma de hipótesis, asuntos o problema que se está investigando, además se explica, brevemente, el enfoque que se dará al problema y los posibles resultados que aportará el autor para solucionar el problema en cuestión.
-- **Introducción**: Una introducción debería responder las siguientes preguntas: ¿Qué estoy estudiando? ¿Por qué es un asunto importante? ¿Qué sabemos fue hecho hasta ahora para resolver el problema?, y ¿Cómo colaborá nuestra respuesta a resolver el problema?.
-- **Preliminares**: Esta sección debe contener los conceptos básicos que se asume, debe conocer el lector del artículo. Debe contener referencias bibliográficas a artículos de base ampliamente conocidos y aceptados por la comunidad científica, puede contener referencias a resultados o métodos presentados en artículos ya aceptados por la comunidad científica; dichos conceptos preliminares deberían ser completos pero sin ser redundantes.
-- **Aporte y Resultados**: Esta sección es la más importante del *paper*, ya que es en donde más se hace foco a la hora de evaluar o ponderar dicho paper. En esta sección se debe describir claramente el objetivo de estudio, presentando las definiciones, propiedades, proposiciones, algoritmos, lemas y/o teoremas que sustenten su aporte, muchas veces para narrar esta parte se utiliza el tiempo pasado para asegurar que el o los resultados han sido testeados.
-- **Discusión**: Toda propuesta debe tener una sección de discusión, allí es importante mencionar las ventajas de la propuesta con un sentido autocrítico, es decir, no decir que nuestro trabajo es el mejor o realizar críticas aplastantes a las respuestas alternativas. Al igual que es importante contemplar las abstracciones que fueron realizadas así como las limitaciones de la propuesta, esto último es muy importante, ya que está mal visto el omitir el mencionar las limitaciones, en todo caso es conveniente mencionar que estos mismos se abordaran en trabajos futuros.
-- **Trabajos Relacionados**: Esta sección implica una profunda y detallada comparación con trabajos que abordan el mismo problema y la misma temática, es fundamental realizar un análisis profundo del *"estado del arte"* para saber si lo propuesto en el artículo no fue presentado por otros. En este apartado puede ocurrir mucho feedback de los revisores o de los asistentes a la presentación del paper.
-- **Conclusiones y Trabajos Futuros**: Esta sección va de la mano del *abstract*, sin embargo, las conclusiones pueden tener mayores detalles técnicos, imposibles de representar en el resumen. Aquellas cuestiones no resueltas, así como las futuras líneas de investigación, deberías quedar especificadas como trabajos futuros.
-- **Agradecimientos**: Si bien esta sección es opcional, generalmente es incluida en los artículos, entre los agradecimientos suelen citarse a colegas que colaboraron en la redacción, instituciones que apoyaron económicamente a la investigación y a los revisores del artículo. En un artículo científico no suelen incluirse agradecimientos a amigos y familiares, cosa común en las tesis y prefacios de libros.
-- **Bibliografía**: Aquí se deben citar todos los materiales referenciados en el *paper*, entre los citados se pueden encontrar gran variedad de fuentes, tales como libros, otros artículos, sitios web, entre otras.
-- **Apéndice**: Esta sección también es opcional, y puede contener tablas de siglas, demostraciones de teoremas, lemas o propiedades, códigos o pseudocódigo del algoritmo propuesto en el artículo, listas de figuras, tablas o grafos o incluso un índice temático, entre otras cosas.
+- **Resumen o Abstract**: Breve síntesis del artículo, cubriendo tópico, método, hallazgos y conclusiones.
+- **Introducción**: Establece el contexto, referencia literatura relacionada, y explica el objetivo, enfoque y posible solución del problema en cuestión. Una introducción debe responder las siguientes preguntas: ¿Qué se estudia? ¿Por qué es relevante? ¿Qué se ha hecho previamente? ¿Cómo se contribuye a la solución?
+- **Preliminares**: Explica conceptos básicos necesarios para comprender el artículo, evitando redundancias, y refiriendo a literatura aceptada.
+- **Aporte y Resultados**: Sección crucial donde se detalla el objetivo de estudio y se presentan definiciones, propiedades, algoritmos, y pruebas que respaldan el aporte.
+- **Discusión**: Analiza ventajas y limitaciones de la propuesta con autocrítica. Las limitaciones no deben ser omitidas y es recomendable mencionar enfoques futuros para abordarlas.
+- **Trabajos Relacionados**: Compara detalladamente con otras investigaciones sobre el mismo tópico, enfatizando la novedad y relevancia del aporte presentado.
+- **Conclusiones y Trabajos Futuros**: Detalla las conclusiones con profundidad y menciona futuras líneas de investigación.
+- **Agradecimientos**: Opcional. Agradece a colaboradores, instituciones financieras, y revisores. No es usual agradecer a familiares o amigos.
+- **Bibliografía**: Cita todas las fuentes referenciadas, incluyendo libros, artículos, y sitios web.
+- **Apéndice**: Opcional. Puede contener tablas, demostraciones, códigos, listas de figuras, entre otros complementos al artículo.
 
 ---
 
 Podemos a su vez establecer diferentes tipos de papers de acuerdo a su forma de, objetivos o profundidad, entre ellos podemos encontrar:
 
-- **Papers Argumentativos**: Se presentan dos visiones o caras de un tema o de una idea, típicamente el autor espera tener una fuerte visión a favor o en contra, por lo general el autor presenta la piótesis junto con la información que sustentan los argumentos a favor, así como la información que sustenta los argumentos en contra. El autor presenta las dos caras de la moneda para resaltar la importancia de su análisis y realizar la relevancia de su propuesta.
-- **Papers que Comparan y Contrastan**: El autor toma dos o más elementos de interés y compara los conceptos de cada uno, los temas de interés que pueden compararse incluyen a autores y/o modelos de referencia en el área, e incluso se pueden llegar a abordar conceptos que estén fuera de las matemáticas. La tesis planteada busca clarificar los conceptos contrastantes, realizando contrastes y comparativas detalladas a lo largo de todo el artículo.
-- **Papers Analíticos**: La idea de este tipo de papers es que el autor se concentre en el hecho en lugar de las opiniones, enfocarse puramente en la investigación, las conclusiones y otros hallazgos realizados por otros investigadores se destacan en este tipo de paper. La idea es estudiar diferentes puntos de vista presentados en una temática sin formar una opinión contundente.
-- **Papers Causa y Efecto**: Estos papers estudian los resultados que se consideran esperados o probables en relación con la acción que los generan, pueden estar basados en demostraciones teóricas o en pruebas empíricas. El autor especifica un esquema que detalla qué puede suceder, aunque también puede predecir el resultado en ciertas situaciones.
-- **Reportes Técnicos**: Los reportes pueden detallas cosas relacionadas con un caso de estudio, los reportes pueden variar en longitud y pueden incluir secciones para, grafos, tablas, figuras, entre otras.
+- **Papers Argumentativos**: Presentan dos perspectivas de un tema. El autor defiende una posición, mostrando argumentos a favor y en contra, para enfatizar su análisis y propuesta.
+- **Papers que Comparan y Contrastan**: Analizan dos o más elementos, pudiendo ser autores, modelos o conceptos. Se busca clarificar diferencias y similitudes detalladamente.
+- **Papers Analíticos**: Enfocados en hechos y resultados de investigaciones previas. Buscan estudiar diferentes perspectivas sin formar una opinión contundente.
+- **Papers Causa y Efecto**: Examina resultados esperados basados en acciones determinadas, a través de demostraciones teóricas o pruebas empíricas. Detallan y predicen posibles consecuencias.
+- **Reportes Técnicos**: Detallan estudios o casos específicos, con posibilidad de incluir gráficos, tablas y figuras.
 
 ###### Objetivos de Papers
 
 Podemos distinguir tres grandes tipos de papers, de acuerdo a lo que los mismos presentan:
 
-- **Presentación de Resultados**: Son los papers que se encuentran con más frecuencia, surgen de la consolidación del trabajo realizado en una línea de investigación, en ellos se presentan los hallazgos, y respuestas a las preguntas de la investigación planteadas, mediante teoremas, proposiciones o resultados empíricos.
-- **Revisión de Estado del Arte**: Este tipo de artículos resumen el estado actual del conocimiento en un cierto tópico, se analizan y discuten investigaciones llevadas a cabo por otros, en lugar de presentar resultados novedosos, son de utilidad, ya que puede ayudar a aquellos que no sean expertos en ese tópico. Estos se pueden realizar de dos formas:
-	1. Revisión de Literatura: los autores eligen los que consideran los artículos más relevantes del tópico.
-	2. Revisión Sistemática: Se determina una lista de criterios a priori, y luego buscar todos los artículos que cumplen en criterio y compararlo.
-- **Presentaciones de Desarrollos**: Este tipo de artículos que presentan implementaciones y desarrollos basadas en algún desarrollo teórico previo. Por lo general, suelen contar con el contenido teórico mínimo e indispensable para comprender la profundidad del desarrollo. En las ciencias de la computación, las conferencias suelen tener un track específico para este tipo de papers, en los cuales se suelen presentar pruebas de eficiencia de algoritmos en ejecución o casos de uso de la tecnología.
+- **Presentación de Resultados**: Artículos frecuentes que muestran hallazgos de una investigación mediante teoremas, proposiciones o resultados empíricos.
+- **Revisión de Estado del Arte**: Artículos que resumen el conocimiento actual sobre un tema, analizando trabajos de otros sin presentar resultados nuevos. Ayudan a no expertos en el área. Se dividen en:
+    1. **Revisión de Literatura**: Selección de los artículos más destacados del tema.
+    2. **Revisión Sistemática**: Búsqueda basada en criterios preestablecidos para comparar artículos.
+- **Presentaciones de Desarrollos**: Artículos que muestran implementaciones basadas en teorías previas. Ofrecen contenido teórico esencial y, en ciencias de la computación, suelen demostrar pruebas de eficiencia o usos tecnológicos.
 
 ### Tesis y Tesinas
 
@@ -115,12 +108,10 @@ La profundidad y el objetivo del trabajo depende del grado académico al que se 
 - **Tesis de maestría**: trabajo exploratorio acerca de una temática en particular, con alto nivel de detalle y posibles conclusiones/identificación de problemas. Suele servir de base para un posterior trabajo doctoral.
 - **Tesis doctorales**: involucran el desarrollo de una nueva teoría o herramienta.
 
-##### Tesis en la Carrera de Licenciatura en Sistemas
-
-Nuestra carrera finaliza con la presentación de una Tesina de grado, en la cátedra ***Trabajo Final***. Existen dos tipos de trabajos posibles.
-1. **Investigación**: introducción a una temática.
-2. **Desarrollo**: diseño e implementación de una herramienta.
-
-Para poder presentarla deberán contar con un Director en el tema que avale su presentación, posteriormente se presenta una propuesta de tesis, una vez aprobada se procede a su desarrollo, y finalmente se defiende la misma. Además, la carrera cuenta con una instancia previa que los alumnos deben aprovechar para “hacer armas”, Taller de Investigación, en el Taller de Investigación se presenta un primer trabajo
-exploratorio de una temática, los cuales son mayoritariamente trabajo grupal.
-Idealmente, el Taller de Investigación prepara el terreno para el Trabajo Final. El alumno debería aspirar a aprovechar la relación entre las cátedras para hacer más eficiente el proceso, e intentar hacer el proceso lo más aceitado posible para aprovechar los resultados de una cátedra en la siguiente.
+>[!tldr] Tesis en la Carrera de Licenciatura en Sistemas
+>Nuestra carrera finaliza con la presentación de una Tesina de grado, en la cátedra ***Trabajo Final***. Existen dos tipos de trabajos posibles.
+>1. **Investigación**: introducción a una temática.
+>2. **Desarrollo**: diseño e implementación de una herramienta.
+>
+>Para poder presentarla deberán contar con un Director en el tema que avale su presentación, posteriormente se presenta una propuesta de tesis, una vez aprobada se procede a su desarrollo, y finalmente se defiende la misma. Además, la carrera cuenta con una instancia previa que los alumnos deben aprovechar para “hacer armas”, Taller de Investigación, en el Taller de Investigación se presenta un primer trabajo exploratorio de una temática, los cuales son mayoritariamente trabajo grupal.
+>Idealmente, el Taller de Investigación prepara el terreno para el Trabajo Final. El alumno debería aspirar a aprovechar la relación entre las cátedras para hacer más eficiente el proceso, e intentar hacer el proceso lo más aceitado posible para aprovechar los resultados de una cátedra en la siguiente.
